# Control-26-DJI-communication-protocol

./: README.md  package.xml  setup.py
config/: topic_config.yaml
dji_referee_protocol/: __init__.py  protocol_constants.py  protocol_parser.py  referee_serial_node.py
launch/: referee_serial_launch.py
reference/: CRC8_CRC16.c  CRC8_CRC16.h  referee_usart_task.c  referee_usart_task.h
test/: test_serial_direct.py  test_topics.py
