<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
  DJI机甲大师裁判系统通信协议ROS 2功能包
  功能：从裁判系统串口读取数据并解析发布为ROS 2话题

  兼容版本：ROS 2 Humble
-->
<package format="3">
  <!-- 功能包基本信息 -->
  <name>dji_referee_protocol</name>
  <version>1.0.0</version>
  <description>
    DJI RoboMaster裁判系统通信协议ROS 2功能包。
    本功能包从裁判系统串口读取数据，严格按照官方协议文档解析，
    并将解析后的数据发布为独立的ROS 2话题。
  </description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- 构建工具配置 -->
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- 运行时依赖 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
